src/test/resources/com/pestphp/pest/features/datasets/InvalidDatasetTest.php
<?php

dataset('dojos', [
    'Cobra Kai',
    'Eagle Fang',
    'Miyagi Do'
]);


it('can check if in the valley', function (string $dojo) {

})->with(<error descr="The dataset does not exist">'dodos'</error>);
